# local_notebook

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml  railway.json  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_tables.py  0002_update_embedding_dim.py  0003_add_message_sources.py  0004_add_audit_logs.py  0005_add_chat_sessions.py  0006_update_embedding_dim_768.py  0007_add_infographics.py  0008_add_slide_decks.py  0009_add_source_tag_and_emails.py  0010_add_minutes_tables.py  0011_add_summary_fields.py  0012_add_llm_settings.py  0013_add_search_indexes.py  0014_add_user_role.py  0015_add_notebook_is_public.py  0016_add_source_folders.py  0017_add_council_tables.py  0018_add_council_agenda_items.py  0019_add_transcriptions.py  0020_add_note_content_field.py  0021_add_council_infographics.py  0022_add_document_checker_tables.py  0023_add_slide_generator_tables.py  0024_add_composite_indexes.py  0025_add_cascade_delete_constraints.py  0026_add_fk_indexes.py  0027_add_message_status.py  0028_add_council_agenda_materials.py  0029_add_prompt_settings.py  0030_add_material_file_upload.py
backend/app/: main.py
backend/app/celery_app/: __init__.py  celery.py  config.py
backend/app/core/: config.py  deps.py  exceptions.py  rate_limiter.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  audit_log.py  chat_session.py  council.py  council_agenda_chunk.py  council_agenda_item.py  council_agenda_material.py  council_chat_session.py  council_infographic.py  council_meeting.py  council_message.py  council_note.py  document_check.py  generated_email.py  infographic.py  llm_settings.py  message.py  minute.py  minute_chunk.py  minute_document.py  note.py  note_source.py  notebook.py  slide_deck.py  slide_project.py  source.py  source_chunk.py  source_folder.py  transcription.py  user.py
backend/app/schemas/: admin.py  auth.py  chat.py  common.py  council.py  council_agenda.py  council_chat.py  council_infographic.py  council_meeting.py  council_note.py  document_check.py  email.py  infographic.py  llm_settings.py  minute.py  note.py  notebook.py  slide.py  slide_generator.py  source.py  source_folder.py  transcription.py
backend/app/services/: audit.py  auth.py  chat_processor.py  content_processor.py  context_retriever.py  council_content_processor.py  council_infographic_planner.py  council_rag.py  document_checker.py  email_generator.py  embedding.py  export_service.py  file_validator.py  image_client.py  infographic_base.py  infographic_planner.py  json_parser.py  llm_client.py  pptx_extractor.py  rag.py  rag_utils.py  search_service.py  (+7 more)
backend/tests/: conftest.py  test_auth.py  test_chat.py  test_file_validator.py  test_health.py  test_minutes.py  test_notebooks.py  test_notes.py  test_search.py  test_sources.py
(+138 files in other folders)
