[tool.poetry]
name = "company-notebook-backend"
version = "0.1.0"
description = "Internal AI Notebook backend"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
alembic = "^1.13.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
pdfplumber = "^0.11.0"
python-docx = "^1.1.0"
pgvector = "^0.2.5"
# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.0,<5.0.0"
# Presentation & Image generation
python-pptx = "^0.6.21"
Pillow = "^10.0.0"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"
isort = "^5.13.0"
mypy = "^1.10.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
