[tool.poetry]
name = "company-notebook-backend"
version = "0.1.0"
description = "Internal AI Notebook backend"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.30.0"}
sqlalchemy = "^2.0.0"
psycopg2-binary = "^2.9.0"
python-dotenv = "^1.0.0"
pydantic = "^2.8.0"
pydantic-settings = "^2.4.0"
alembic = "^1.13.0"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
pdfplumber = "^0.11.0"
python-docx = "^1.1.0"
pgvector = "^0.2.5"
beautifulsoup4 = "^4.12.0"
PyPDF2 = "^3.0.0"
# Authentication
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
bcrypt = "^4.0.0,<5.0.0"
# YouTube transcription
yt-dlp = ">=2024.11.0"
# PowerPoint support
python-pptx = "^1.0.0"
# Celery & Redis for async task queue
celery = {extras = ["redis"], version = "^5.3.0"}
redis = "^5.0.0"
flower = "^2.0.0"

[tool.poetry.group.dev.dependencies]
black = "^25.0.0"
isort = "^5.13.0"
mypy = "^1.10.0"
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
warn_return_any = false
warn_unused_ignores = true
ignore_missing_imports = true
implicit_optional = true
disable_error_code = ["arg-type", "assignment", "return-value", "call-arg", "var-annotated", "attr-defined", "index", "operator", "list-item", "dict-item", "union-attr", "call-overload", "no-redef", "name-defined"]
